fix patterns being cut off

--- a/src/components/ScanRequest/PatternSelection/PatternSelection.css
+++ b/src/components/ScanRequest/PatternSelection/PatternSelection.css
@@ -16,7 +16,7 @@
 
 #PatternSelection {
     width: 100%;
-    height: 100%;
+    height: 89%;
 }
 
 .PatternLabel {
